Fixed the grid layout when different size screens are used -- Increased spacing between titles and descriptions

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -268,8 +268,8 @@ body {
   margin-right: auto;
 }
 
-.mythHeight {
-  height: 725px;
+.mythTitleSize {
+  height: 4rem;
 }
 
 /**Contact Section on Index Page */
